tests/analyze/let-destructure-refutable/analyze.snap
---
source: tests/analyze.rs
assertion_line: 41
expression: output
---
error: This pattern can fail to match; `let` bindings must be irrefutable.
> 6 | 	let some x = some 5
           ^^^^^^

error: Name `x` is not defined.
> 7 | 	print (to-string x)
                        ^

error: This pattern can fail to match; `let` bindings must be irrefutable.
> 10 | 	let 1 = 1
            ^
